# SUSTech-CS-Course

./: .gitignore  README.md
CS205 C&C++ Program Design/Final Review/: Final Review.aux  Final Review.fdb_latexmk  Final Review.fls  Final Review.tex
CS205 C&C++ Program Design/Midterm Review/: Midterm Review.aux  (+3 more)
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/: CMakeLists.txt  README.md  main.cpp
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/AIFF/: Aiff2wav.cpp  Aiff2wav.h  Wav2aiff.cpp  Wav2aiff.h
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Decoder/: Flac2wav.cpp  Flac2wav.h  FlacMetadata.cpp  FlacMetadata.h  Wav2pcm.cpp  Wav2pcm.h
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Encoder/: Pcm2wav.cpp  Pcm2wav.h  Wav2flac.cpp  Wav2flac.h
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Gui/: .gitignore  index.html  main.js  package.json  renderer.js
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Gui/exec/mac/: gtwd
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Libraries/: SimpleIni.h  clipp.h
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/ProvidedDocuments/: output.flac  output.ini  output.pcm
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/ProvidedDocuments/aiff/: ovs.aiff
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/ProvidedDocuments/raw/: ovs.ini
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/ProvidedDocuments/robust/: wrong CRC.flac  wrong md5.flac  wrong name.flac  wrong sync code.flac
CS205 C&C++ Program Design/Project/gtwd-CS205-C-CPP/Utils/: FileIO.cpp  MD5.cpp  MD5.h  Utils.h
(+7904 files in other folders)
